--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,3 +1,3 @@
 option_settings:
   aws:elasticbeanstalk:container:python:
-    WSGIPath: django_run_task_eb/wsgi.py
+    WSGIPath: django_run_tast_eb/wsgi.py
